update committees info

--- a/QCrypt 2022 _ Committees.html
+++ b/QCrypt 2022 _ Committees.html
@@ -348,7 +348,7 @@
 <h4>University of Geneva</h4>
 <ul class="socials">
 <li>
-<a class="social" rel="noreferrer" href="https://www.unige.ch/gap/quantum/members:nicolas_gisin" target="_blank">
+<a class="social" rel="noreferrer" href="https://www.unige.ch/gap/qic/gisin/" target="_blank">
 <svg class="icon icon-site"><use xlink:href="#site"></use></svg>Site</a>
 </li>
 </ul>
@@ -398,29 +398,30 @@
 </section>
 <h2 id="program-committee">Program Committee</h2>
 <h3 id="pc-chairs">PC chairs</h3>
+
 <section class="members">
 <h2></h2>
 <ul class="members">
-<li><div class="photo" role="presentation" style="background-image:url(https://scholar.google.fr/citations/images/avatar_scholar_128.png)"></div>
-<div class="label">
-<h3>Anthony Martin</h3>
-<h4>Université Côte d'Azur</h4>
-<ul class="socials">
-</ul>
-<h4>PC chair (experiment)</h4>
-</div>
-</li>
-<li><div class="photo" role="presentation" style="background-image:url(https://static.wixstatic.com/media/46fe7e_2cf181d97983453da970f3b9cf876a08~mv2.jpg/v1/fill/w_113,h_149,al_c,q_80,usm_0.66_1.00_0.01/CharlesLim_profile_2019.webp)"></div>
-<div class="label">
-<h3>Lim Ci Wen (Charles)</h3>
-<h4>Centre for Quantum Technologies, National University of Singapore</h4>
-<ul class="socials">
-<li>
-<a class="social" rel="noreferrer" href="http://camiller.iacs.umd.edu/" target="_blank">
-<svg class="icon icon-site"><use xlink:href="#site"></use></svg>Site</a>
-</li>
-</ul>
-<h4>PC chair (theory)</h4>
+    <li><div class="photo" role="presentation" style="background-image:url(https://static.wixstatic.com/media/46fe7e_2cf181d97983453da970f3b9cf876a08~mv2.jpg/v1/fill/w_113,h_149,al_c,q_80,usm_0.66_1.00_0.01/CharlesLim_profile_2019.webp)"></div>
+        <div class="label">
+        <h3>Lim Ci Wen (Charles)</h3>
+        <h4>National University of Singapore</h4>
+        <ul class="socials">
+        <li>
+        <a class="social" rel="noreferrer" href="https://www.ccwlim.com/" target="_blank">
+        <svg class="icon icon-site"><use xlink:href="#site"></use></svg>Site</a>
+        </li>
+        </ul>
+        <h4>PC chair (theory)</h4>
+    
+    <li><div class="photo" role="presentation" style="background-image:url(https://scholar.google.fr/citations/images/avatar_scholar_128.png)"></div>
+    <div class="label">
+    <h3>Anthony Martin</h3>
+    <h4>Université Côte d'Azur</h4>
+    <ul class="socials"></ul>
+    <h4>PC chair (experiment)</h4>
+    </div> </li>
+
 </div>
 </li>
 </ul>
