--- a/QCrypt 2022 _ Committees.html
+++ b/QCrypt 2022 _ Committees.html
@@ -429,7 +429,35 @@
 <br></p>
 <h3 id="pc-members">PC members</h3>
 <ul>
-<h4>TBD</h4>
+    <li>Anthony Leverrier (Inria, FR)</li>
+    <li>Mario Berta (AWS & Imperial College, US/UK)</li>
+    <li>Yanbao Zhang (NTT, JPN)</li>
+    <li>Stefano Pironio (ULB, BE)</li>
+    <li>Aleksey Fedorov (RQC, RU)</li>
+    <li>Wang Xiangbin (Tsinghua, CN)</li>
+    <li>Rotem Arnon-Friedman (WIS, IL)</li>
+    <li>Ernest Tan (IQC, CA)</li>
+    <li>Anna Pappa (TU Berlin, GE)</li>
+    <li>Valerio Scarani (NUS, SG)</li>
+    <li>Hoi-Kwong Lo (Uni of Hong Kong, HK)</li>
+    <li>Liang Jiang (Uni of Chicago, US)</li>
+    <li>Anurag Anshu (Harvard, US)</li>
+    <li>Romain Alleaume (Telecom Paris, FR)</li>
+    <li>Tobias Gehring (TUD, DK)</li>
+    <li>Nino Walenta (HHI, GE)</li>
+    <li>Zhiliang Yuan (BAQIS, CN)</li>
+    <li>Yuan Cao (USTC, CN)</li>
+    <li>Zheshen Zhang (Arizona, US)</li>
+    <li>Veronica Fernandez (SNRS, ES)</li>
+    <li>Jacqui Romero (Uni of Queensland, AU)</li>
+    <li>Bing Qi (CISCO, US)</li>
+    <li>Eleni Diamanti (LIP6 Sorbonne Uni, FR)</li>
+    <li>Wang Chao (NUS, SG)</li>
+    <li>Davide Rusca (Univ. of Geneva, CH)</li>
+    <li>Djeylan Aktas (RCQI, SK)</li>
+    <li>Siddarth Joshi (University of Bristol, UK)</li>
+    <li>Yunhong Ding (TUD, DK)</li>
+    
 </ul>
 </section>
 </main>
