--- a/index.html
+++ b/index.html
@@ -72,8 +72,8 @@
 </header>
 <main>
 <div class="jumbo">
-<div class="jumbo-cover" style="background-image:url(https://homepage.iis.sinica.edu.tw/~ching0812p/QCrypt_background2022.png)" aria-label="QCrypt 2022 background"></div>
-<img id="jumbo-img" src="https://homepage.iis.sinica.edu.tw/~ching0812p/QCrypt_background2022.png">
+<div class="jumbo-cover" style="background-image:url(https://homepage.iis.sinica.edu.tw/~ching0812p/QCrypt_background2022.png)" aria-label="QCrypt 2022 background" ></div>
+<img id="jumbo-img" src="https://homepage.iis.sinica.edu.tw/~ching0812p/QCrypt_background2022.png" >
 <div id="jumbo-overlay" class="show"></div>
 <div class="inner-wrapper">
 <img class="jumbo-logo" src="./QCrypt 2021 _ Home_files/QCr_Logo2022.png" alt="logo QCrypt 2022">
@@ -87,6 +87,8 @@
 <section class="info container primary">
 <div class="wrapper">
 <div class="inner">
+<h3 style="color:red" id="23-27-august-2021">!!! Due to the global situation caused by the COVID-19 pandemic, we cannot confirm what form (on-site, hybrid or fully online) the conference will take place in.</h3>
+
 <h2 id="what-is-qcrypt-2021">What is QCrypt 2022?</h2>
 <p>QCrypt 2022 is the 12th edition of the yearly international scientific conference presenting last year’s top results in quantum cryptography. See the list of previous conferences <a style="color:red" href="./QCrypt 2022 _ QCrypt Charter & History.html">here</a>.</p>
 </div>
