--- a/index.html
+++ b/index.html
@@ -87,10 +87,9 @@
 <section class="info container primary">
 <div class="wrapper">
 <div class="inner">
-<h3 style="color:red" id="23-27-august-2021">!!! Due to the global situation caused by the COVID-19 pandemic, we cannot confirm what form (on-site, hybrid or fully online) the conference will take place in.</h3>
-
 <h2 id="what-is-qcrypt-2021">What is QCrypt 2022?</h2>
 <p>QCrypt 2022 is the 12th edition of the yearly international scientific conference presenting last year’s top results in quantum cryptography. See the list of previous conferences <a style="color:red" href="./QCrypt 2022 _ QCrypt Charter & History.html">here</a>.</p>
+<h3 style="color:red" id="23-27-august-2021">Due to the uncertainty caused by the COVID-19 pandemic, it is not decided yet what form (on-site, hybrid, or fully online) the conference will take place in. We will update the information here as soon as it is determined.</h3>
 </div>
 </section>
 <section class="location">
